# namecheap

./: .env.example  Cargo.toml  README.md  getContacts.json
src/: lib.rs  main.rs
src/domains/: README.md  get_contacts.rs  get_list.rs  get_tld_list.rs  mod.rs
src/domains_dns/: README.md  get_hosts.rs  get_list.rs  mod.rs  set_hosts.rs
src/response/: mod.rs  paging.rs  parse_value.rs
src/utils/: mod.rs  request_builder.rs  tracer.rs  xml_parser.rs
